chore: Add reference files to .gitignore
Ignoring files from other projects/templates:
- md_files/ (reference documentation)
- notebooks/ (template notebooks)
- Template example files
- Reference PDFs and docs
- Unused template directories (src/handlers, src/prompt_engineering)

These are for local reference only, not part of our project.

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,27 @@ temp/
 *.tmp
 
 # ============================================================================
+# Reference Documentation (from other projects - not ours!)
+# ============================================================================
+md_files/
+notebooks/
+examples/basic_completion.py
+examples/chain_prompts.py
+examples/chat_session.py
+examples/data/
+examples/genai_project.jpg
+data/Generative_AI_Mastery_Checklist_Comprehensive.docx
+data/Generative_AI_Mastery_Checklist_Comprehensive.pdf
+data/prompts/  # Reference prompts from template
+data/sample.json
+
+# ============================================================================
+# Unused Template Files
+# ============================================================================
+src/handlers/
+src/prompt_engineering/
+
+# ============================================================================
 # Node.js (legacy - can remove if not needed)
 # ============================================================================
 node_modules/
